# demo

./: init.py  pyproject.toml  server.py
config/: content.htm  content_backup.htm  sitetitle
content/: 1b.html  About.html  Ardunio.html  Brython-1.html  Brython-2.html  Brython.html  Brython2.html  CMS 改版.html  CP 靜態網頁連結.html  CP抽點程式.html  CP靜態網頁連結.html  Constancy.html  Control-1.html  Control-2.html  Control.html  CoppeliaSim.html  DAE.html  Docker.html  Edu resource.html  Execute Complex Commands.html  Export img.html  Ext.html  File format.html  Files.html  Flask.html  Fusion 360.html  Gear.html  HW.html  Linux 指令.html  Mechatronics.html  NAT.html  NX Drill Press.html  NX start.html  NX.html  NXOpen.html  Network.html  News.html  Nginx.html  OOP.html  Onshape Drill Press.html  (+53 more)
downloads/: Using_python_arduino_read_sensor_data_html.7z  block.7z  gear_design.7z  gear_model2_c.7z  goal_keeper_fosball_solvespace.7z  lua_web.7z  ncat_7.92.7z  one_and_two_link_solvespace.7z  one_link_slvs_nx.7z  processhacker.7z  rect_walk_w_start_button_html.7z  web_based_nx2027_nxopen_python_ex.7z
downloads/py/: pyweb3d.py
